--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <div class="logo">
                     <a href=""><span>my</span> works</a>
                 </div>
-                <ul class="d-flex flex-wrap">
+                <ul class="d-flex">
                     <li><a href="">история</a></li>
                     <li><a href="">работа</a></li>
                     <li><a href="">контакты</a></li>
